[package]
name = "picture_of_the_day"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.16.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking","json"]}
chrono = "0.4"
walkdir = "2.3.2"
tempfile = "3.3.0"